<resources>
    <string name="app_name">Android OCR</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="action_sign_in">Sign In</string>
    <string name="hello_first_fragment">hello_first_fragment</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>
    <string name="loading">Loading ...</string>
    <string name="col1">Name</string>
    <string name="col2">Email</string>
    <string name="col3">Student_ID</string>
    <string name="row1Name">Abhinav Mehta</string>
    <string name="row1email">mehta34@uwindsor.ca</string>
    <string name="row1SID">110045366</string>
    <string name="row2Name">Ami Bharat Gosaliya</string>
    <string name="row2email">gosaliy@uwindsor.ca</string>
    <string name="row2SID">110057181</string>
    <string name="row3Name">Dhara Kishorbhai Hirpara</string>
    <string name="row3email">hirpara3@uwindsor.ca</string>
    <string name="row3SID">110071938</string>
    <string name="row4Name">Divyesh Saraf</string>
    <string name="row4email">sarafd@uwindsor.ca</string>
    <string name="row4SID">110066238</string>
    <string name="row5Name">Karan Jatinbhai Rawal</string>
    <string name="row5email">rawal1@uwindsor.ca</string>
    <string name="row5SID">110066189</string>
    <string name="row6Name">Shivam Dwivedi</string>
    <string name="row6email">dwivedi2@uwindsor.ca</string>
    <string name="row6SID">110071950</string>
    <string name="row7Name">Suhail Singh Bains</string>
    <string name="row7email">bains22@uwindsor.ca</string>
    <string name="row7SID">110081555</string>
    <string name="row8Name">Varinder Pal Babool</string>
    <string name="row8email">babool@uwindsor.ca</string>
    <string name="row8SID">110057836</string>


</resources>